--- a/P004429.opf/meta.yml
+++ b/P004429.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004429
+id: P004429
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS18913
   title: གྲོང་གསེབ་ཀྱི་རྒྱུན་འབྱུང་བྱས་ཉེས་དང་དེ་དག་གི་སྔོན་འགོག་ཐབས་ལམ།
-  volume: ''
   author: ''
+  volumes: {}
