--- a/P004429.opf/meta.yml
+++ b/P004429.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS18913
   title: གྲོང་གསེབ་ཀྱི་རྒྱུན་འབྱུང་བྱས་ཉེས་དང་དེ་དག་གི་སྔོན་འགོག་ཐབས་ལམ།
   author: ''
-  volumes: {}
+  volumes:
+    7ee4f88b03064fb294b8ddd9778e6fa7:
+      image_group_id: I8LS18915
+      title: ''
+      volume_number: 1
+      total_pages: 312
