--- a/P004429.opf/layers/v001/Pagination.yml
+++ b/P004429.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: cebdbf82b0fe4e9083cc373322086539
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   635651f6e0e644eca997da0a30059e0c:
