--- a/P004429.opf/meta.yml
+++ b/P004429.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004429
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W8LS18913
   title: གྲོང་གསེབ་ཀྱི་རྒྱུན་འབྱུང་བྱས་ཉེས་དང་དེ་དག་གི་སྔོན་འགོག་ཐབས་ལམ།
