--- a/P004429.opf/meta.yml
+++ b/P004429.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004429
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:20:46.237503
 source_metadata:
   id: bdr:W8LS18913
   title: གྲོང་གསེབ་ཀྱི་རྒྱུན་འབྱུང་བྱས་ཉེས་དང་དེ་དག་གི་སྔོན་འགོག་ཐབས་ལམ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 312
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: true
